--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go get github.com/edsrzf/mmap-go; go build -v ./...
+      run: go get github.com/edsrzf/mmap-go; go build -v ./mmap.go
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./mmap.go
