--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,8 +19,9 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      #run: go get github.com/edsrzf/mmap-go; go build -v ./mmap.go
+      run: go get github.com/edsrzf/mmap-go; go build -v mmap.go
       run: go build -v inc.go
 
     - name: Test
+      run: go test -v mmap.go
       run: go test -v inc.go
