--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,10 +18,12 @@ jobs:
       with:
         go-version: 1.17
 
-    - name: Build
+    - name: Build1
       run: go get github.com/edsrzf/mmap-go; go build -v mmap.go
+    - name: Build2   
       run: go build -v inc.go
 
-    - name: Test
+    - name: Test1
       run: go test -v mmap.go
+    - name: Test2
       run: go test -v inc.go
