--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,11 +19,11 @@ jobs:
         go-version: 1.17
 
     - name: Build1
-      run: go build -v mmap.go
+      run: go build -v mmap-syscall.go
     - name: Build2   
       run: go build -v inc.go
 
     - name: Test1
-      run: go test -v mmap.go
+      run: go test -v mmap-syscall.go
     - name: Test2
       run: go test -v inc.go
